--- a/MagicMirror.DataAccess/MagicMirror.DataAccess.csproj
+++ b/MagicMirror.DataAccess/MagicMirror.DataAccess.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MagicMirror.DataAccess.Entities\MagicMirror.DataAccess.Entities.csproj" />
   </ItemGroup>
 
