--- a/MagicMirror.Business/MagicMirror.Business.csproj
+++ b/MagicMirror.Business/MagicMirror.Business.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\MagicMirror.DataAccess\MagicMirror.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
