--- a/MagicMirror.Tests/MagicMirror.Tests.csproj
+++ b/MagicMirror.Tests/MagicMirror.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MagicMirror.Business\MagicMirror.Business.csproj" />
     <ProjectReference Include="..\MagicMirror.DataAccess.Entities\MagicMirror.DataAccess.Entities.csproj" />
     <ProjectReference Include="..\MagicMirror.DataAccess\MagicMirror.DataAccess.csproj" />
   </ItemGroup>
