--- a/MagicMirror.ConsoleApp/MagicMirror.ConsoleApp.csproj
+++ b/MagicMirror.ConsoleApp/MagicMirror.ConsoleApp.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MagicMirror.DataAccess\MagicMirror.DataAccess.csproj" />
+    <ProjectReference Include="..\Acme.Generic\Acme.Generic.csproj" />
+    <ProjectReference Include="..\MagicMirror.Business\MagicMirror.Business.csproj" />
   </ItemGroup>
 
 </Project>
