--- a/MagicMirror.ConsoleApp/MagicMirror.ConsoleApp.csproj
+++ b/MagicMirror.ConsoleApp/MagicMirror.ConsoleApp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
 
