--- a/MagicMirror.ConsoleApp/MagicMirror.ConsoleApp.csproj
+++ b/MagicMirror.ConsoleApp/MagicMirror.ConsoleApp.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MagicMirror.Business\MagicMirror.Business.csproj" />
+  </ItemGroup>
 </Project>
