--- a/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
+++ b/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
@@ -119,11 +119,15 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Configuration\AutoMapperPresentationProfile.cs" />
+    <Compile Include="Converters\TrafficModelToMainViewModel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\TrafficApiProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Models\MainViewModel.cs" />
+    <Compile Include="Models\UserSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -151,6 +155,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper">
+      <Version>10.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
       <Version>3.1.8</Version>
     </PackageReference>
@@ -159,6 +166,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Acme.Generic\Acme.Generic.csproj">
+      <Project>{7d549f87-b245-443e-9d45-a6e094d55ecd}</Project>
+      <Name>Acme.Generic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MagicMirror.Business\MagicMirror.Business.csproj">
       <Project>{b18ff7a4-bcbe-41c3-901a-a4c9f84d26d3}</Project>
       <Name>MagicMirror.Business</Name>
