--- a/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
+++ b/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
@@ -174,6 +174,10 @@
       <Project>{b18ff7a4-bcbe-41c3-901a-a4c9f84d26d3}</Project>
       <Name>MagicMirror.Business</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MagicMirror.DataAccess\MagicMirror.DataAccess.csproj">
+      <Project>{9FF244EA-D3C8-40BE-B89C-CD6912DC0713}</Project>
+      <Name>MagicMirror.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
