--- a/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
+++ b/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
@@ -121,11 +121,11 @@
     </Compile>
     <Compile Include="Configuration\AutoMapperPresentationProfile.cs" />
     <Compile Include="Converters\TrafficModelToMainViewModel.cs" />
-    <Compile Include="IMirrorService.cs" />
+    <Compile Include="Services\IMirrorService.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MirrorService.cs" />
+    <Compile Include="Services\MirrorService.cs" />
     <Compile Include="Models\TrafficApiProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\MainViewModel.cs" />
@@ -184,6 +184,7 @@
       <Name>MagicMirror.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
