--- a/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
+++ b/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
@@ -222,7 +222,12 @@
       <Name>MagicMirror.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PRIResource Include="Strings\en-EN\Resources.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\nl-NL\Resources.resw" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
