Getting back into it

--- a/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
+++ b/MagicMirror.UniversalApp/MagicMirror.UniversalApp.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\UpcomingDay.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Models\UserSettings.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
